# projetos

Descoberta de vizinho MatLab/: Tabela de Médias.xlsx  descoberta.m  no.m  simulador.m
Descoberta de vizinho MatLab/Cod Alterado/: CRtrocaCanal.m  sPr.m  simulador.m  trocaCanal.m
Descoberta de vizinho MatLab/Geral/: CRtrocaCanalJ.m  CRtrocaCanalR.m  sPrJ.m  sPrR.m  simulador.m
Descoberta de vizinho MatLab/Gráficos/: Thumbs.db  finalTime.fig
Descoberta de vizinho MatLab/Método Jerônimo/: CRtrocaCanalJ.m  conter.m  descoberta.m  sPrJ.m  sensoria.m  simulador.m
Descoberta de vizinho MatLab/Método aleatório/: CRtrocaCanalR.m  atualizaCFreeCBusy.m  conter.m  ocupa.m  sPrR.m  simulador.m
Deteccao_Placas/: Thumbs.db
Deteccao_Placas/Deteccao_Placas/: NewTemplates.mat  RobertsFilter.m  RobertsNoFilter.m  SobelFilter.m  SobelNoFilter.m  Thumbs.db  joab.m  meu_teste.m  teste.m
Deteccao_Placas/car license plate reader/: Thumbs.db
Projeto POO/: Arvore.java  Assinantes.java  Central.java  Centralbck.java  Encaminhamento.java  Rede.java  Rota.java  Simula.java  logencA.txt  logencA.txt~  projeto2-2016-10-13_20.15.30.mkv
gr-ChiQuadrado/: CMakeLists.txt  MANIFEST.md
gr-ChiQuadrado/docs/: README.ChiQuadrado
gr-ChiQuadrado/grc/: CMakeLists.txt  ChiQuadrado_ChiSquare.xml
gr-ChiQuadrado/lib/: CMakeLists.txt  qa_ChiQuadrado.cc  qa_ChiQuadrado.h  test_ChiQuadrado.cc
gr-ChiQuadrado/python/: CMakeLists.txt  ChiSquare.py  __init__.py
gr-ChiQuadrado/swig/: CMakeLists.txt  ChiQuadrado_swig.i
gr-JaqueBera/: CMakeLists.txt  MANIFEST.md
gr-JaqueBera/docs/: README.JaqueBera
gr-JaqueBera/grc/: CMakeLists.txt  JaqueBera_JaqueBera.xml
gr-JaqueBera/lib/: CMakeLists.txt  qa_JaqueBera.cc  qa_JaqueBera.h  test_JaqueBera.cc
gr-JaqueBera/python/: CMakeLists.txt  JaqueBera.py  __init__.py
gr-JaqueBera/swig/: CMakeLists.txt  JaqueBera_swig.i
gr-RochaStatics/: CMakeLists.txt  MANIFEST.md
gr-RochaStatics/docs/: README.RochaStatics
gr-RochaStatics/grc/: CMakeLists.txt  RochaStatics_Statics_Rocha.xml
gr-RochaStatics/lib/: CMakeLists.txt  qa_RochaStatics.cc  qa_RochaStatics.h  test_RochaStatics.cc
gr-RochaStatics/python/: CMakeLists.txt  Statics_Rocha.py  __init__.py
gr-RochaStatics/swig/: CMakeLists.txt  RochaStatics_swig.i
gr-andersondarling/: CMakeLists.txt  MANIFEST.md
gr-andersondarling/docs/: README.andersondarling
gr-andersondarling/grc/: CMakeLists.txt  andersondarling_AndersonDarling.xml
gr-andersondarling/lib/: CMakeLists.txt  qa_andersondarling.cc  qa_andersondarling.h  test_andersondarling.cc
gr-andersondarling/python/: AndersonDarling.py  CMakeLists.txt  __init__.py
gr-detector_energy/: CMakeLists.txt  MANIFEST.md
gr-detector_energy/lib/: CMakeLists.txt  qa_detector_energy.cc  qa_detector_energy.h  test_detector_energy.cc
teste-app-joab/: README.md  app.json  bower.json  circle.yml  conf.json  gulpfile.js  index.html  package.json  server.js
(+87 files in other folders)
